Refactor: snapshot generation asset inputs